# logparser

./: .gitignore  README.md  logparser.cabal
app/: Main.hs
src/: LogParser.hs
src/Domain/: ConfigRules.hs  Rule.hs
src/Matchers/: Counter.hs  Parser.hs  RatioCalculator.hs  TimeAverager.hs
src/Utils/: Counter.hs
test/: LogParserSpec.hs
test/Matchers/: TimeAveragerSpec.hs
test/testfiles/: config.json  configAvgTime.json
