name:                logparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/logparser#readme
license:             BSD3
license-file:        LICENSE
author:              Ricky Crump
maintainer:          example@example.com
copyright:           2018 Ricky Crump
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LogParser
                     , Domain.ConfigRules
                     , Domain.Rule
                     , Matchers.TimeAverager
                     , Matchers.Counter
                     , Matchers.RatioCalculator
                     , Utils.Counter
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , time
  default-language:    Haskell2010

executable logparser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , logparser
  default-language:    Haskell2010

test-suite logparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logparser
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/logparser
